add onclick on button using function

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
 
 
 
-
+    <button onclick="lightPink()">Make Light Pink</button>
+    <button onclick="lightBlue()">Make Light Blue</button>
+    <br>
+    <button onclick="lightGreen()">Make Green</button> 
+    <!-- <button onclick="document.body.style.backgroundColor ='lightBlue'">Make Light Blue</button>  -->
+    <button onclick="lavender()">Make Lavender</button> <br>
+    <button id="yellow-bg">Make Light Yellow</button>
+    <button id="purple-bg">Make Light Purple</button>
 
 
 
