add on button addEventListener

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
     <!-- <button onclick="document.body.style.backgroundColor ='lightBlue'">Make Light Blue</button>  -->
     <button onclick="lavender()">Make Lavender</button> <br>
     <button id="yellow-bg">Make Light Yellow</button>
-    <button id="purple-bg">Make Light Purple</button>
+    <button id="salmon-bg">Make Salmon</button> <br>
+    <button id="orange-bg">Make Orange</button> 
+    <button id="purple-bg">Make Purple</button>  <br>
+    <button id="violate-bg">Make Violet</button> 
+
+
 
 
 
