--- a/bubble-delegate.html
+++ b/bubble-delegate.html
@@ -20,6 +20,6 @@
        <button id="add-btn">Add item</button>
     </section>
 
-    <script src="js/bubble-detegate.js"></script>
+    <script src="js/bubble-delegate.js"></script>
 </body>
 </html>
